Implemented random string id generation